refactor: adjust classes and functions

--- a/index.html
+++ b/index.html
@@ -100,20 +100,25 @@
 					<div class="technologies__description">
 						<h3 class="technologies__subtitle">Focus <span class="technologies__highlight">Web.</span></h3>
 						<p class="technologies__text">
-							Atualmente, as principais tecnologias que utilizo e tenho maior domínio são HTML, CSS, JavaScript , React
-							& Angular. Gosto muito da parte visual do desenvolvimento e de suas interações. Todavia, também tenho
-							conhecimentos em Java, PhP e C++ - durante o curso de informática no IFBA - Campus Jequié utilizei tais
-							tecnologias. Além disso, estou cursando Sistemas de Informação na UESB - Campus Jequié, onde também já
-							trabalhei com C e Java.
+							Atualmente, as principais tecnologias que utilizo e tenho maior domínio são <strong>HTML</strong>,
+							<strong>CSS</strong>, <strong class="project__strong--highlight">JavaScript</strong> ,
+							<strong class="project__strong--highlight">React</strong> &
+							<strong class="project__strong--highlight">Angular</strong>. Gosto muito da parte visual do
+							desenvolvimento e de suas interações. Todavia, também tenho conhecimentos em Java, PhP e C++ - durante o
+							curso <strong>Técnico em Informática</strong> no <strong>IFBA</strong> - Campus Jequié utilizei tais
+							tecnologias. Além disso, estou cursando <strong>Sistemas de Informação</strong> na <strong>UESB</strong> -
+							Campus Jequié, onde também já trabalhei com C e Java.
 						</p>
 						<p class="technologies__text">
-							No ano de 2024, realizei a 1ª fase da residência TIC36, onde cursei a trilha de Front-End (UI/UX + Angular
-							13+), acumalando um repertório significativo no desenvolvimento de interfaces agradáveis, intuitivas e
-							consistentes. Em 2025, realizei a 2ª fase, atuando como Designer UI/UX no desenvolvimento de um projeto
-							com em acessibilidade para uma das empresas parceiras do CEPEDI.
+							No ano de 2024, realizei a <strong>1ª fase</strong> da <strong>residência TIC36</strong>, onde cursei a
+							trilha de <strong> Front-End (UI/UX + Angular 13+) </strong>, acumalando um repertório significativo no
+							desenvolvimento de interfaces agradáveis, intuitivas e consistentes. Em 2025, realizei a
+							<strong>2ª fase</strong>, atuando como <strong>Designer UI/UX</strong> no desenvolvimento de um projeto
+							com em acessibilidade para uma das empresas parceiras do <strong>CEPEDI</strong>.
 						</p>
 						<p class="technologies__text">
-							Além disso, busco constantemente melhorar minhas habilidades para o desenvolvimento de aplicações web.
+							Além disso, busco <strong>constantemente melhorar</strong> minhas <strong>habilidades</strong> para o
+							<strong>desenvolvimento de aplicações web</strong>.
 						</p>
 					</div>
 
@@ -312,6 +317,7 @@
 						minha carreira como desenvolvedor Frontend, aplicando HTML e CSS. Além disso, também estudei C++, Java e
 						PhP.
 					</p>
+					<span class="status"></span>
 				</article>
 
 				<img class="logo" src="./src/assets/images/academic/ilogo.jpeg" alt="" />
