--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-    <link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./src/styles/style.css" />
 		<link rel="stylesheet" href="src/styles/header.css" />
@@ -27,10 +27,13 @@
 
 		<header id="header" class="header">
 			<div class="header__wrapper">
-				<a href="#home">
-					<h1 class="header__logo">Mateus Santos</h1>
-				</a>
-				<nav class="header__nav">
+				<div class="header__intro">
+					<a class="header__logo" href="#home">
+						<h1 class="header__title">Mateus Santos</h1>
+					</a>
+					<i class="fa-solid fa-burger toggle-menu"></i>
+				</div>
+				<nav class="header__nav hidden">
 					<ul class="header__list">
 						<li class="header__item">
 							<a class="header__link header__link--active" href="#home">Home</a>
