feat: final adjustments

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<a class="header__link" href="#contact">Contato</a>
 						</li>
 					</ul>
-					<i class="fa-solid fa-sun header__icon"></i>
+					<i class="fa-solid fa-sun header__icon" title="Tema"></i>
 				</nav>
 			</div>
 		</header>
@@ -70,9 +70,10 @@
 						<h1 class="home__title">Hello, World!</h1>
 						<h2 class="home__subtitle">Sou <span class="home__highlight">Web Developer</span></h2>
 						<p class="home__description">
-							Olá, é um prazer tê-lo(a) por aqui. Meu nome é Mateus Santos e sou programador com foco em desenvolvimento
-							web. Além de ser apaixonado por aprender e entender tecnologias, também sou graduando de Sistemas de
-							Informação, na UESB - Campus Jequié, e residente em TIC36 no CEPEDI.
+							Olá! Meu nome é Mateus Santos, sou desenvolvedor <strong>web</strong> com foco em
+							<strong>interfaces modernas</strong> e <strong>funcionais</strong>, graduando em Sistemas de Informação
+							pela UESB – Campus Jequié e residente formado em Tecnologias da Informação e Comunicação (TIC36) pelo
+							CEPEDI.
 						</p>
 						<div class="container-link-button">
 							<a class="link-button primary" href="">
@@ -88,9 +89,9 @@
 				</div>
 
 				<div class="home__icons">
-					<i class="fa-brands fa-github home__icon"></i>
-					<i class="fa-brands fa-linkedin home__icon"></i>
-					<i class="fa-solid fa-envelope home__icon"></i>
+					<i class="fa-brands fa-github home__icon" title="GitHub"></i>
+					<i class="fa-brands fa-linkedin home__icon" title="LinkedIn"></i>
+					<i class="fa-solid fa-envelope home__icon" title="Email"></i>
 				</div>
 			</section>
 
@@ -114,10 +115,10 @@
 						</p>
 						<p class="technologies__text">
 							No ano de 2024, realizei a <strong>1ª fase</strong> da <strong>residência TIC36</strong>, onde cursei a
-							trilha de <strong> Front-End (UI/UX + Angular 13+) </strong>, acumalando um repertório significativo no
+							trilha de <strong> Front-End (UI/UX + Angular 13+)</strong>, acumalando um repertório significativo no
 							desenvolvimento de interfaces agradáveis, intuitivas e consistentes. Em 2025, realizei a
 							<strong>2ª fase</strong>, atuando como <strong>Designer UI/UX</strong> no desenvolvimento de um projeto
-							com em acessibilidade para uma das empresas parceiras do <strong>CEPEDI</strong>.
+							focado em acessibilidade para uma das empresas parceiras do <strong>CEPEDI</strong>.
 						</p>
 						<p class="technologies__text">
 							Além disso, busco <strong>constantemente melhorar</strong> minhas <strong>habilidades</strong> para o
@@ -285,18 +286,18 @@
 						<p class="description"></p>
 
 						<div class="info">
-							<img class="image" src="src/assets/images/projects/it-solutions.jpeg" alt="" />
+							<img class="image" src="" alt="" />
 
 							<ul class="technologies-list"></ul>
 						</div>
 					</div>
 
 					<div class="container-links">
-						<a href="" class="academic-link">
+						<a href="" class="academic-link deploy-link">
 							<span>Visualizar</span>
 							<i class="fa-solid fa-eye"></i>
 						</a>
-						<a href="" class="academic-link">
+						<a href="" class="academic-link code-link">
 							<span>Code</span>
 							<i class="fa-brands fa-github"></i>
 						</a>
@@ -311,19 +312,15 @@
 			<div class="group right">
 				<article class="card">
 					<header class="header">
-						<h2 class="instution">IFBA</h2>
-						<span class="period">2019 - 2024</span>
+						<h2 class="instution"></h2>
+						<span class="period"></span>
 					</header>
-					<h4 class="course">Técnico em Informática</h4>
-					<p class="description">
-						Cursei Técnico em Informática no IFBA, onde tive meu primeiro contato com a programação. Aqui, dei início a
-						minha carreira como desenvolvedor Frontend, aplicando HTML e CSS. Além disso, também estudei C++, Java e
-						PhP.
-					</p>
+					<h4 class="course"></h4>
+					<p class="description"></p>
 					<span class="status"></span>
 				</article>
 
-				<img class="logo" src="./src/assets/images/academic/ilogo.jpeg" alt="" />
+				<img class="logo" src="" alt="" />
 			</div>
 		</template>
 
