feat: add links

--- a/index.html
+++ b/index.html
@@ -76,11 +76,14 @@
 							CEPEDI.
 						</p>
 						<div class="container-link-button">
-							<a class="link-button primary" href="">
+							<a
+								class="link-button primary"
+								href="https://www.canva.com/design/DAFa2Qr6kYw/0BQ9-jf2eSqjWNaBU-BiWw/edit?utm_content=DAFa2Qr6kYw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+							>
 								<span>Currículo</span>
 								<i class="fa-solid fa-up-right-from-square"></i>
 							</a>
-							<a class="link-button secondary" href="">
+							<a class="link-button secondary" href="https://www.linkedin.com/in/mateus-santos-1a7361246/">
 								<span>Contratar</span>
 							</a>
 						</div>
@@ -89,8 +92,10 @@
 				</div>
 
 				<div class="home__icons">
-					<i class="fa-brands fa-github home__icon" title="GitHub"></i>
-					<i class="fa-brands fa-linkedin home__icon" title="LinkedIn"></i>
+					<a href="https://github.com/MateusSKV9"><i class="fa-brands fa-github home__icon" title="GitHub"></i></a>
+					<a href="https://www.linkedin.com/in/mateus-santos-1a7361246/"
+						><i class="fa-brands fa-linkedin home__icon" title="LinkedIn"></i
+					></a>
 					<i class="fa-solid fa-envelope home__icon" title="Email"></i>
 				</div>
 			</section>
