feat: add target="_blank" to links

--- a/index.html
+++ b/index.html
@@ -79,11 +79,18 @@
 							<a
 								class="link-button primary"
 								href="https://www.canva.com/design/DAFa2Qr6kYw/0BQ9-jf2eSqjWNaBU-BiWw/edit?utm_content=DAFa2Qr6kYw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+								target="_blank"
+								rel="noopener noreferrer"
 							>
 								<span>Currículo</span>
 								<i class="fa-solid fa-up-right-from-square"></i>
 							</a>
-							<a class="link-button secondary" href="https://www.linkedin.com/in/mateus-santos-1a7361246/">
+							<a
+								class="link-button secondary"
+								href="https://www.linkedin.com/in/mateus-santos-1a7361246/"
+								target="_blank"
+								rel="noopener noreferrer"
+							>
 								<span>Contratar</span>
 							</a>
 						</div>
@@ -92,11 +99,15 @@
 				</div>
 
 				<div class="home__icons">
-					<a href="https://github.com/MateusSKV9"><i class="fa-brands fa-github home__icon" title="GitHub"></i></a>
-					<a href="https://www.linkedin.com/in/mateus-santos-1a7361246/"
+					<a href="https://github.com/MateusSKV9" target="_blank" rel="noopener noreferrer"
+						><i class="fa-brands fa-github home__icon" title="GitHub"></i
+					></a>
+					<a href="https://www.linkedin.com/in/mateus-santos-1a7361246/" target="_blank" rel="noopener noreferrer"
 						><i class="fa-brands fa-linkedin home__icon" title="LinkedIn"></i
 					></a>
-					<i class="fa-solid fa-envelope home__icon" title="Email"></i>
+					<a href="#" target="_blank" rel="noopener noreferrer"
+						><i class="fa-solid fa-envelope home__icon" title="Email"></i
+					></a>
 				</div>
 			</section>
 
@@ -232,15 +243,15 @@
 			<h2 class="section-title">Contato</h2>
 
 			<div class="contact__icons">
-				<a class="contact__link" href="">
+				<a class="contact__link" href="https://github.com/MateusSKV9" target="_blank" rel="noopener noreferrer">
 					<i class="fa-brands fa-github contact__icon"></i>
 					<span>MateusSKV9</span>
 				</a>
-				<a class="contact__link" href="">
+				<a class="contact__link" href="https://www.linkedin.com/in/mateus-santos-1a7361246/" target="_blank" rel="noopener noreferrer">
 					<i class="fa-brands fa-linkedin contact__icon"></i>
 					<span>Mateus Santos</span>
 				</a>
-				<a class="contact__link" href="">
+				<a class="contact__link" href="" target="_blank" rel="noopener noreferrer">
 					<i class="fa-solid fa-envelope contact__icon"></i>
 					<span>mateussilvanzg</span>
 				</a>
@@ -298,11 +309,11 @@
 					</div>
 
 					<div class="container-links">
-						<a href="" class="academic-link deploy-link">
+						<a href="" class="academic-link deploy-link" target="_blank">
 							<span>Visualizar</span>
 							<i class="fa-solid fa-eye"></i>
 						</a>
-						<a href="" class="academic-link code-link">
+						<a href="" class="academic-link code-link" target="_blank">
 							<span>Code</span>
 							<i class="fa-brands fa-github"></i>
 						</a>
