feat: update index title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="src/styles/home.css" />
 		<link rel="stylesheet" href="src/styles/technologies.css" />
 		<link rel="stylesheet" href="src/styles/contact.css" />
-		<title>portfolio-02</title>
+		<title>Mateus Santos - Portfolio-02</title>
 		<script>
 			(function () {
 				const savedTheme = localStorage.getItem("theme") || "light";
