--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				document.documentElement.setAttribute("data-theme", savedTheme);
 			})();
 		</script>
+		<link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
 		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
 	</head>
 	<body>
