chore: optimize images

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					</div>
 					<img
 						class="home__image"
-						src="src/assets/imaga-profile.jpeg"
+						src="src/assets/image-profile.webp"
 						alt="Mateus Santos"
 						decoding="async"
 						width="370"
