feat: improve loading

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	</head>
 	<body>
 		<div id="loading-screen" class="loading-screen">
+			<img class="loading-screen__image" src="public/favicon.ico" alt="" />
 			<div class="loading-screen__spinner"></div>
 		</div>
 
