chore: update og:image meta tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		/>
 		<meta
 			property="og:image"
-			content="https://mateus-santos-portfolio-02.vercel.app/assets/imaga-profile-D_c1Do3H.jpeg"
+			content="https://raw.githubusercontent.com/MateusSKV9/portfolio-02/refs/heads/main/src/assets/image-profile.webp"
 		/>
 		<meta property="og:image:alt" content="Mateus Santos Logo" />
 		<meta property="og:url" content="https://mateus-santos-portfolio-02.vercel.app/" />
