--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</head>
 	<body>
 		<div id="loading-screen" class="loading-screen">
-			<img class="loading-screen__image" src="public/favicon.ico" alt="" />
+			<img class="loading-screen__image" src="favicon.ico" alt="Logo" />
 			<div class="loading-screen__spinner"></div>
 		</div>
 
